fixed challenge card picture size and add gutter in gap between challenge cards

--- a/main.css
+++ b/main.css
@@ -304,6 +304,7 @@ img {
   .challenges-list {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    column-gap: 0.2rem;
     width: auto;
     margin-left: 8rem;
     margin-right: 8rem;
@@ -325,7 +326,7 @@ img {
   overflow: hidden;
   justify-content: space-between;
   max-width: 85vw;
-  justify-content: space-between;
+  width: 100%;
 }
 .challenges-item > *:not(img) {
   margin: 0 1rem;
@@ -336,7 +337,7 @@ img {
   justify-content: start;
   align-items: flex-end;
   margin: 0;
-  max-width: 363px;
+  width: 100%;
   height: 219px;
   background-size: cover;
   background-position: center center;
@@ -347,7 +348,7 @@ img {
   margin-right: 0.7rem;
   font-size: 1.5rem;
   z-index: 1;
-  color: #021928;
+  color: #8acfe5;
 }
 .challenges-item .challenge-title {
   font-size: 1.8rem;
